@@ -4,6 +4,12 @@ init:
     ; Better safe than sorry.
     stz $13 : stz $14
 
+    ; Reset layer 1 and 2 X positions.
+    rep #$20
+    stz $1A
+    stz $1E
+    sep #$20
+
     ; Reset the custom midway object counter.
     lda #$00 : sta !ram_cust_obj_num
 
